ASSERTION FAILED: !isAnonymous() in WebCore::RenderMathMLOperator::updateTokenContent https://bugs.webkit.org/show_bug.cgi?id=166011

Patch by Frederic Wang <fwang@igalia.com> on 2017-11-16
Reviewed by Alejandro G. Castro.

Source/WebCore:

RenderMathMLFencedOperator does not support mathvariant or displaystyle transforms. This is
one of several issues of the mfenced element (see bug 160509). However,
MathMLStyle::updateStyleIfNeeded() still tries to use the implementation of the parent
RenderMathMLOperator class, which only works for non-anonymous operators. This patch skips
the updateTokenContent() calls for anonymous mfenced operators in order to avoid ASSERTION
failures.

Test: mathml/mfenced-displaystyle-and-mathvariant-crash.html

* rendering/mathml/MathMLStyle.cpp:
(WebCore::MathMLStyle::updateStyleIfNeeded): Skip anonymous token elements.

LayoutTests:

Add a crash test checking displaystyle and mathvariant on mfenced operators.

* mathml/mfenced-displaystyle-and-mathvariant-crash-expected.txt: Added.
* mathml/mfenced-displaystyle-and-mathvariant-crash.html: Added.

Canonical link: https://commits.webkit.org/195787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224910 268f45cc-cd09-0410-ab3c-d52691b4dbfc